<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>
        <import
            alias="StringUtils"
            type="com.kxl.atu.databindingexample.utils.MyStringUtils" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openBasic"
                android:text="@string/sample_title_basic" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="killFind"
                android:text="@string/just_kill_find" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="basicData"
                android:text="@string/basic_data_type" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="bindEvent"
                android:text="@string/bind_event" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="autoUpdate"
                android:text="@string/auto_update" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="recycler"
                android:text="@string/recycler" />

        </LinearLayout>
    </ScrollView>
</layout>
